@@ -26,6 +26,6 @@
 
 int WacomGetSupportedUSBDeviceList(WACOMDEVICEREC** ppList, int* pnSize);
 unsigned int WacomGetUSBDeviceFromName(const char* pszName);
-WACOMTABLET WacomOpenUSBTablet(int fd, WACOMMODEL* pModel);
+WACOMTABLET WacomOpenUSBTablet(WACOMENGINE hEngine, int fd, WACOMMODEL* pModel);
 
 #endif /* __LINUXWACOM_WACUSB_H */
